force-app/main/default/objects/Flow_Version_Cleaner_Log__c/Flow_Version_Cleaner_Log__c.object-meta.xml
<CustomObject>
    <description>Logs every Flow version processed by the Flow Version Cleaner batch jobs.</description>
    <label>Flow Version Cleaner Log</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Version Cleaner Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>