force-app/main/default/objects/Flow_Version_Cleaner_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The action taken or event that occurred.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Deleted</fullName><default>false</default><label>Deleted</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Preserved</fullName><default>false</default><label>Preserved</label></value>
            <value><fullName>Dry Run</fullName><default>false</default><label>Dry Run</label></value>
            <value><fullName>Teardown</fullName><default>false</default><label>Teardown</label></value>
            <value><fullName>Teardown Failed</fullName><default>false</default><label>Teardown Failed</label></value>
            <value><fullName>Skipped</fullName><default>false</default><label>Skipped</label></value>
            <value><fullName>Info</fullName><default>false</default><label>Info</label></value>
            <value><fullName>Warning</fullName><default>false</default><label>Warning</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>