force-app/main/default/objects/Flow_Version_Cleaner_Log__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <description>Which batch class created this log entry.</description>
    <label>Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FlowVersionCleaner</fullName>
            </value>
            <value>
                <fullName>InactiveFlowCleaner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>