force-app/main/default/objects/Flow_Version_Cleaner_Log__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <description>Apex batch job ID. All log records from the same run share this value.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>