force-app/main/default/objects/Flow_Version_Cleaner_Log__c/fields/Dry_Run__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this log entry was created during a dry run.</description>
    <label>Dry Run</label>
    <type>Checkbox</type>
</CustomField>