force-app/main/default/objects/Flow_Version_Cleaner_Log__c/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>The API name of the Flow definition.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>