force-app/main/default/objects/Flow_Version_Cleaner_Log__c/fields/Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Flow_Status__c</fullName>
    <description>The status of the Flow version at the time it was processed (e.g. Obsolete, Draft).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>