force-app/main/default/objects/Flow_Version_Cleaner_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Log message — carries informational messages, warnings, and error details.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>