force-app/main/default/objects/Flow_Version_Cleaner_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The Salesforce ID of the Flow version record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>