force-app/main/default/objects/Flow_Version_Cleaner_Log__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <description>The date and time this log entry was created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Run Date</label>
    <type>DateTime</type>
</CustomField>