force-app/main/default/objects/Flow_Version_Cleaner_Log__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>The version number of the Flow version processed.</description>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>